Fixed responsiveness overflow

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -76,6 +76,11 @@ textarea {
 #feed {
   width: 100% !important;
 
+  .event {
+    max-width: 95% !important;
+    margin-right: 0px !important;
+  }
+
   .content {
     width: 50%;
   }
